--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 <body>
     <div class="container">
         <h1>GitHub 文件加速</h1>
-        <form action="./" method="get" target="_blank">
-            <input class="url" name="q" type="text" placeholder="键入Github文件链接" pattern="^((https|http):\/\/)?(github\.com\/.+?\/.+?\/(?:releases|archive|blob|raw|suites)|((?:raw|gist)\.(?:githubusercontent|github)\.com))\/.+$" required>
+        <form action="./" method="get" style="padding-bottom: 40px" target="_blank" class="flex" onsubmit="toSubmit(event)">
+            <input class="block url" name="q" type="text" placeholder="键入Github文件链接" pattern="^((https|http):\/\/)?(github\.com\/.+?\/.+?\/(?:releases|archive|blob|raw|suites)|((?:raw|gist)\.(?:githubusercontent|github)\.com))\/.+$" required>
             <div class="bar"></div>
             <input class="block btn" type="submit" value="下载">
         </form>
