--- a/index.html
+++ b/index.html
@@ -120,5 +120,6 @@
         </div>
     </div>
     <p style="margin-top: 20px;">项目基于Cloudflare Workers，开源于GitHub <a href="https://github.com/hunshcn/gh-proxy" style="color: #3294ea">hunshcn/gh-proxy</a></p>
+    <p style="margin-top: 25px;">推荐使用IPV6访问本服务，因为速度快啊，不信你Ping一下。 </p>
 </body>
 </html>
