--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             height: 100vh;
         }
 
-        。container {
+        .container {
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
